tdf#166335 oox export: don't export invalid gluepoint fmla

We started exporting gluepoints with 25.2.2
commit/86d36ee56521438069504fbacff8dc2aff3a1afc
    "tdf165262 PPTX export: fix shape export regression"
and some of them were not in valid OOXML format.

In this case, we were exporting an empty
 fmla=""
which is seen as a corrupt document by MS Office.

make CppunitTest_sd_export_tests-ooxml3 \
    CPPUNIT_TEST_NAME=testTdf135843

make CppunitTest_sw_ooxmlexport13 CPPUNIT_TEST_NAME=testTdf123435

Change-Id: I4297d24b8e884199b8da0253ab855417b828aa75
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197003
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197365
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>